# estimation-comparison

./: .gitignore  main.py  pyproject.toml
data/synthetic/: count_64
src/estimation_comparison/: __init__.py  benchmark.py  database.py  model.py
src/estimation_comparison/algorithm/: autocorrelation.py  byte_count.py  entropy.py  estimator_base.py
src/estimation_comparison/analysis/: __init__.py  analyze.py  explore_panel.py  fit.py  graph_panel.py  panel_model.py  plot.py  prediction_panel.py  publish.py  tags_panel.py
src/estimation_comparison/compressor/: compressor_base.py
src/estimation_comparison/data_collection/: algorithm_base.py  benchmark.py  database.py  download_data.py  gen_synth_data.py  summary_stats.py
src/estimation_comparison/data_collection/compressor/: __init__.py  gzip.py  jxl.py  lzma.py
src/estimation_comparison/data_collection/compressor/general/: __init__.py  base.py  bzip2.py  gzip.py  lzma.py  zstd.py
src/estimation_comparison/data_collection/compressor/image/: __init__.py  base.py  jpeg.py  jpeg2k.py  jxl.py  png.py  webp.py
src/estimation_comparison/data_collection/estimator/: __init__.py  autocorrelation.py  autocovariance.py  base.py  byte_count.py  byte_count_gte.py  entropy.py  estimator_base.py
src/estimation_comparison/data_collection/preprocessor/: __init__.py  linear_sample.py  patch_sample.py  sampler_base.py
src/estimation_comparison/data_collection/preprocessor/image/: patch_sample.ipynb  patch_sample.py
src/estimation_comparison/data_collection/scripts/: __init__.py  benchmark.py  download_data.py  gen_synth_data.py  unpickler.py
src/estimation_comparison/estimator/: __init__.py  autocorrelation.py  byte_count.py
src/estimation_comparison/scripts/: __init__.py  panel_serve.py
tests/: autocorrelation_tests.py  byte_count_tests.py  entropy_tests.py
