[project]
name = "estimation-comparison"
version = "0.1.0"
description = "Run compression estimation algorithms on files"
authors = [
    { name = "Julian Nowaczek", email = "jnowaczek@users.noreply.github.com" },
]
dependencies = [
    "numpy>=2.1.0",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    "bokeh>=3.5.2",
    "pyarrow>=17.0.0",
    "imagecodecs[all]>=2024.6.1",
    "requests>=2.32.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }


[tool.pdm]
distribution = false
