[project]
name = "estimation-comparison"
version = "0.1.0"
description = "Run compression estimation algorithms on files"
authors = [
    { name = "Julian Nowaczek", email = "jnowaczek@users.noreply.github.com" },
]
dependencies = [
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "bokeh>=3.6.0",
    "pyarrow>=17.0.0",
    "imagecodecs[all]>=2024.9.22",
    "requests>=2.32.3",
    "wand>=0.6.13",
    "hvplot>=0.11.0",
    "traitlets>=5.14.3",
    "dask[complete]>=2024.11.0",
    "zstandard>=0.23.0",
    "asyncssh>=2.18.0",
    "paramiko>=3.5.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

[project.scripts]
benchmark = "estimation_comparison.data_collection.scripts.benchmark:main"
download_data = "estimation_comparison.data_collection.scripts.download_data:main"
gen_synth_data = "estimation_comparison.data_collection.scripts.gen_synth_data:main"

[tool.pdm]
distribution = true

